@@ -1,9 +1,10 @@
 package com.poscodx.mysite.security;
 
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import com.poscodx.mysite.vo.UserVo;
@@ -13,9 +14,7 @@ public class UserDetailsImpl extends UserVo implements UserDetails  {
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		return List.of(
-				()-> "ROLE_" + getRole()
-				);
+		return Arrays.asList(new SimpleGrantedAuthority("ROLE_" + getRole()));
 	}
 
 	@Override
